# py-train-graph

./: .gitignore  AGENTS.md  LICENSE  README.md  launch-train-graph.bat  launch-train-graph.sh  pyproject.toml
archive/: PyTrainGraph_old.sh  py_train_graph.py  requirements.txt
custom_schedules/: custom_schedule_example.csv
presets/: example_preset.json
py_train_graph/: __init__.py  config.py  fetch.py  main.py  parse.py  plot.py  utils.py
routes/: london_to_oxford.csv  london_to_reading.csv
scripts/: launch-train-graph.ps1  launch-train-graph.sh
tests/: conftest.py  test_cli_args.py  test_preset_cli.py  test_utils.py
